# query-builder

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: builder.py  main.py  models.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: query.py
backend/app/core/: README.md  config.py  middleware.py
backend/app/dialects/: athena.py  base.py  sqlite.py
backend/app/schemas/: query.py
backend/app/services/: query_builder.py
backend/tests/: test_builder.py
docs/: deploy-new-project.md
frontend/: .dockerignore  .env.local.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: DialectSelector.tsx  FieldList.tsx  FilterList.tsx  QueryOutput.tsx  README.md
frontend/src/features/query-builder/: QueryBuilder.tsx  types.ts
frontend/src/features/query-builder/components/: ClusterSelector.tsx  DialectSelector.tsx  FieldList.tsx  FilterList.tsx  ModeSelector.tsx  QueryOutput.tsx
frontend/src/features/query-builder/hooks/: useQueryBuilder.ts
frontend/src/features/query-builder/metadata/: catalog.ts  (+1 more)
frontend/src/hooks/: README.md  useQueryBuilder.ts
frontend/src/services/: apiClient.ts  types.ts
frontend/src/shared/hooks/: useLocalStorage.ts
frontend/src/shared/utils/: generateId.ts
frontend/src/utils/: formatSQL.ts
scripts/: deploy-vps.sh  deploy.sh  query-builder.service  setup-vps.sh
tests/: test_builder.py
(+1 files in other folders)
